--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qr-code",
   "version": "0.1.0",
-  "homepage": "https://thuchuynhct.github.io//",
+  "homepage": "https://thuchuynhct.github.io/qrcode/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "file-saver": "^2.0.5",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
@@ -27,7 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-		"deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
